--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,10 @@ font-weight: bold;
 color: var(--text);
 }
       
+h2 > a:link {
+    text-shadow: 0 0 10px #ff5555;
+}
+
+h2 > a:visited {
+    text-shadow: 0 0 10px #ff6565;
+}
